--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Pages7</title>
     <link rel="stylesheet" href="styles/reset.css">
    
     <link rel="preconnect" href="https://fonts.googleapis.com">
