--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
     <div class="fullScreenImage">
         <div class="fullScreenImageText">
-            <h3 class="serviceDescriptionApartment ">Проект  Двухкомнтаной квартиры в ЖК Лесной Пейзаж</h3>
+            <h3 class="serviceDescriptionApartment ">Проект  Двухкомнатаной квартиры в ЖК Лесной Пейзаж</h3>
         </div>
     </div>
 
