--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
            </div>
 
             <div id="services" class="listServices">  
-                <h2 class="textServices">услуги</h2>
+                <h2 class="textServices">услугиии</h2>
                 <div class="listServicesWrapper">
                     <div class="servicesContainer">
                         <div class="boxPriceServiceDescriptionLayout">
