--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
            </div>
 
             <div id="services" class="listServices">  
-                <h2 class="textServices">услугеее</h2>
+                <h2 class="textServices">услуги</h2>
                 <div class="listServicesWrapper">
                     <div class="servicesContainer">
                         <div class="boxPriceServiceDescriptionLayout">
@@ -100,7 +100,37 @@
                     </div>
                 </div>
                 <a class="orderService" href="">Заказать услугу</a>
-            </div>  
+            </div>
+            
+            <div class="reviews">
+                <h2 class="reviewsTitle">отзывы</h2>
+                <div class="containerReviews">
+                    <div class="colReviews">
+                        <p class="nameReview">Ксения, проект 65 кв.м.</p>
+                        <div class="boxReviews">
+                            <p>Хочу искренне поблагодарить Вас за работу, проделанную на высоком уровне! Нам с мужем было очень приятно с Вами работать! Спасибо за Ваше умение правильно слышать пожелания своих клиентов и выполнять работу, которая превосходит все ожидания! Мы даже не надеялись, что на 34 кв.м. кто-то сможет нам грамотно разместить все, что мы хотим и даже больше!</p>
+                            <br>
+                            <p>Вам удалось это просто превосходно! Нам лишь осталось воплотить красоту, которую Вы нам создали в жизнь и поделиться с Вами результатом!</p>                    
+                        </div>
+                    </div>
+                    <div class="colReviews">
+                        <p class="nameReview">Регина, проект 89 кв.м.</p>
+                        <div class="boxReviews">
+                            <p>Спасибо большое за такой классный проект! Все стильно, круто, продумано! Очень приятно было с вами работать! Спасибо, что терпели наши «хочу это, хочу то» в поисках идеального для нас ремонта. Здорово, что мы нашли такого основательного, ответственного и внимательного к деталям дизайнера!</p>
+                            <br>
+                            <p>Хочется скорее реализовать проект и наслаждаться современной, функциональной и красивой квартирой! Будем рекомендовать Вас всем друзьям и знакомым!</p>
+                        </div>
+                    </div> 
+                </div>
+                <div class="colReviews colReviews_big">
+                    <p class="nameReview">Яна, проект 120 кв.м.</p>
+                    <div class="boxReviews">
+                        <p>Хотелось бы сказать большое спасибо за проделанную работу! В задачу Марины входила разработка дизайн-проекта в минимальные сроки, и мне, конечно, не хотелось при этом потерять качество выполнения работы. Но волнения были напрасны: все вопросы решались оперативно, всегда предлагалось несколько вариантов решения, а также предоставлялись комментарии, какой способ решения будет более подходящим.</p>
+                        <br>
+                        <p>В итоге проект был сдан в оговоренный срок, и мне просто не терпится приступить к его реализации! Проект получился очень стильным и современным! Буду рекомендовать Вас тем, кому еще предстоит это непростое дело - ремонт!</p>
+                    </div>
+                </div>
+            </div>
 
             <!-- <div class="fullScreenImage">
                 <div class="fullScreenImageText">
