--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             </div>
             
             <div class="reviews">
-                <h2 class="reviewsTitle">отзывы</h2>
+                <h2 class="reviewsTitle">отзывыыыы</h2>
                 <div class="containerReviews">
                     <div class="colReviews">
                         <p class="nameReview">Ксения, проект 65 кв.м.</p>
