--- a/index.html
+++ b/index.html
@@ -132,11 +132,38 @@
                 </div>
             </div>
 
-            <!-- <div class="fullScreenImage">
-                <div class="fullScreenImageText">
-                    <h3 class="serviceDescriptionApartment ">Проект  Двухкомнатаной квартиры в ЖК Лесной Пейзаж</h3>
+            <div class="gallerySection">
+                <div class="galleryContainer">
+                    <div class="gallery">
+                        <p class="galleryTitle">галерея проектов</p>
+                        <div class="gallerySlides">
+                            <div class="gallerySlide gallerySlide_active">
+                                <div class="box boxBed"></div>
+                                <p class="galleryName">Проект  Двухкомнтаной квартиры в ЖК Лесной Пейзаж</p>
+                            </div>
+                            <div class="gallerySlide">
+                                <div class="box boxArmchair"></div>
+                                <p class="galleryName">Проект гостиной в ЖК Маяк</p>
+                            </div>
+                            <div class="gallerySlide">
+                                <div class="box boxSofa"></div>
+                                <p class="galleryName">Визуализация кухни-гостиной в частном доме</p>
+                            </div>
+                            <div class="gallerySlide">
+                                <div class="box boxTable"></div>
+                                <p class="galleryName">Проект кухни в скандинавском стиле для ЖК Северный Ветер</p>
+                            </div>
+                        </div>
+                        <div class="galleryControls">
+                            <button class="galleryControlPrev"></button>
+                            <button class="galleryControlNext"></button>
+                        </div>
+                    </div>
                 </div>
             </div>
+
+
+            <!-- 
 
             <div id="contacts" class="contactsWrapper">
                 <div class="contacts">
@@ -168,5 +195,7 @@
             </div>
             <a class="linkToLayout"  href="https://www.figma.com/file/pO3xJQIYQbIML72gL52PNF/SD-%D0%A1ode-%E2%80%94-%D0%B4%D0%B8%D0%B7%D0%B0%D0%B9%D0%BD-%D0%B8%D0%BD%D1%82%D0%B5%D1%80%D1%8C%D0%B5%D1%80%D0%B0?node-id=16-325&t=W4gJQYFn0hj1F0Xy-0" target="_blank">студия дизайна интерьера Метрика — 2023</a>
         </footer> -->
+
+        <script src="gallery.js"></script>
 </body>
 </html>
